--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.9.2",
+    "nunjucks": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -18,6 +21,8 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "sequelize": "^6.37.1",
+    "sequelize-cli": "^6.6.2",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
