sequelize를 이용한 db연결 구현
책에 나온 내용이 아닌 최신 방법으로 바꿈 참고 블로그 https://any-ting.tistory.com/49

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "k8867790**6",
-    "database": "new_schema",
+    "database": "nr_information",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
