--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sequelize-cli": "^6.6.2",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
