--- a/package.json
+++ b/package.json
@@ -7,18 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.79",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "assert": "^2.1.0",
-    "cors": "^2.8.5",
-    "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
     "nunjucks": "^3.2.4",
-    "path": "^0.12.7",
-    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -58,9 +53,6 @@
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.24",
-    "nodemon": "^3.0.3",
-    "ts-node": "^10.9.2"
+    "nodemon": "^3.0.3"
   }
 }
