Revert "sequelize를 이용한 db연결 구현"
This reverts commit d7b894d87aa0eb0b992e2c9ab8c1ef9d8434768c.

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "k8867790**6",
-    "database": "nr_information",
+    "database": "new_schema",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
