--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.18.79",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
