--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "framer-motion": "^11.0.8",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
     "nunjucks": "^3.2.4",
@@ -27,6 +28,7 @@
     "sequelize-cli": "^6.6.2",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
