feat. login, location 기능
기능: 로그인구현완료, 사용자위치완료, 검색지 위치완료, 아직 사용자위치와 검색지위치 비교를 통한 위치 인증 수정중.

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "qwer1234",
-    "database": "test",
+    "database": "neighborhood_restaurant_backend",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
