--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "framer-motion": "^11.0.8",
+    "http-proxy-middleware": "^2.0.6",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
     "nunjucks": "^3.2.4",
@@ -25,7 +28,6 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "sequelize": "^6.37.1",
-    "sequelize-cli": "^6.6.2",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "url": "^0.11.3",
@@ -56,6 +58,7 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sequelize-cli": "^6.6.2"
   }
 }
