--- a/package.json
+++ b/package.json
@@ -1,19 +1,8 @@
 {
-  "name": "Back_End",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "author": "sungjun",
-  "license": "ISC",
-  
+  "name": "neighborhood_restaurant",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
-    "express-session": "^1.17.1",
-    "passport": "^0.4.1",
-    "passport-kakao": "^1.0.0",
-    "passport-local": "^1.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,8 +12,11 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "framer-motion": "^11.0.8",
+    "http-proxy-middleware": "^2.0.6",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
     "nunjucks": "^3.2.4",
@@ -36,7 +28,6 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "sequelize": "^6.37.1",
-    "sequelize-cli": "^6.6.2",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "url": "^0.11.3",
@@ -67,6 +58,7 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sequelize-cli": "^6.6.2"
   }
 }
