--- a/Back/package.json
+++ b/Back/package.json
@@ -14,57 +14,20 @@
     "passport": "^0.4.1",
     "passport-kakao": "^1.0.0",
     "passport-local": "^1.0.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.79",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "cors": "^2.8.5",
     "framer-motion": "^11.0.8",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
     "nunjucks": "^3.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.0",
-    "react-kakao-login": "^2.1.1",
-    "react-router-dom": "^6.22.2",
-    "react-scripts": "5.0.1",
-    "recoil": "^0.7.7",
     "sequelize": "^6.37.1",
     "sequelize-cli": "^6.6.2",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "url": "^0.11.3",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
