--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "express": "^4.19.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
