--- a/client/package.json
+++ b/client/package.json
@@ -8,18 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.79",
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
     "framer-motion": "^11.0.8",
     "http-proxy-middleware": "^2.0.6",
     "morgan": "^1.10.0",
-    "mysql2": "^3.9.2",
-    "nunjucks": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
@@ -27,7 +25,6 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
-    "sequelize": "^6.37.1",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "url": "^0.11.3",
@@ -56,5 +53,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6"
   }
 }
