로그인 된 사용자 위치 추가 수정중

--- a/Back/package.json
+++ b/Back/package.json
@@ -2,7 +2,7 @@
   "name": "Back",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "author": "sungjun",
   "license": "ISC",
   
