--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.79",
-    "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-kakao-login": "^2.1.1",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.2.74",
     "nodemon": "^3.0.3",
     "sequelize-cli": "^6.6.2"
   }
