--- a/Back/config/config.json
+++ b/Back/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "qwer1234",
-    "database": "neighborhood_restaurant_backend",
+    "database": "nr_information",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
