--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,6 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
-    "react-kakao-login": "^2.1.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
@@ -54,6 +53,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.74",
+    "@types/react-bootstrap": "^0.32.36",
     "nodemon": "^3.0.3",
     "sequelize-cli": "^6.6.2"
   }
