--- a/client/package.json
+++ b/client/package.json
@@ -8,25 +8,22 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.79",
-    "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.19",
-    "axios": "^1.6.8",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "framer-motion": "^11.0.8",
-    "http-proxy-middleware": "^2.0.6",
-    "morgan": "^1.10.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
-    "react-kakao-login": "^2.1.1",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "sequelize": "^6.37.1",
     "styled-components": "^6.1.8",
-    "typescript": "^5.4.3",
+    "typescript": "^4.9.5",
     "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
@@ -55,11 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6"
-  },
-  "description": "branch1",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC"
+    "@types/react": "^18.2.74",
+    "@types/react-bootstrap": "^0.32.36"
+  }
 }
