--- a/Back/config/config.json
+++ b/Back/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "qwer1234",
+    "password": "password",
     "database": "nr_information",
     "host": "127.0.0.1",
     "dialect": "mysql"
