--- a/Back/package.json
+++ b/Back/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "express-session": "^1.17.1",
+    "httpx": "^3.0.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
     "nunjucks": "^3.2.4",
