--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
