--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.74",
-    "@types/react-bootstrap": "^0.32.36"
+    "@types/react-bootstrap": "^0.32.36",
+    "tailwindcss": "^3.4.10"
   }
 }
