--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,8 @@
   "devDependencies": {
     "@types/react": "^18.2.74",
     "@types/react-bootstrap": "^0.32.36",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10"
   }
 }
