--- a/Back/package.json
+++ b/Back/package.json
@@ -6,6 +6,7 @@
   "author": "sungjun",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.19.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.20.2",
@@ -13,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
+    "express-sanitizer": "^1.0.6",
     "express-session": "^1.17.1",
     "httpx": "^3.0.1",
     "morgan": "^1.10.0",
