--- a/Back/config/config.json
+++ b/Back/config/config.json
@@ -4,6 +4,7 @@
     "password": "qwer1234",
     "database": "nr_information",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "use_env_variable": true
   }
 }
