--- a/Back/config/config.json
+++ b/Back/config/config.json
@@ -5,6 +5,6 @@
     "database": "nr_information",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "use_env_variable": true
+    "use_env_variable": false
   }
 }
