--- a/Back/config/config.json
+++ b/Back/config/config.json
@@ -2,6 +2,16 @@
   "development": {
     "username": "root",
     "password": "qwer1234",
+    "database": "mariadb",
+    "host": "svc.sel4.cloudtype.app",
+    "dialect": "mysql"
+  }
+}
+
+{
+  "development": {
+    "username": "root",
+    "password": "qwer1234",
     "database": "nr_information",
     "host": "127.0.0.1",
     "dialect": "mysql"
