--- a/Back/config/config.json
+++ b/Back/config/config.json
@@ -4,16 +4,7 @@
     "password": "qwer1234",
     "database": "mariadb",
     "host": "svc.sel4.cloudtype.app",
-    "dialect": "mysql"
-  }
-}
-
-{
-  "development": {
-    "username": "root",
-    "password": "qwer1234",
-    "database": "nr_information",
-    "host": "127.0.0.1",
+    "port": 32303,
     "dialect": "mysql"
   }
 }
