--- a/Back/config/config.json
+++ b/Back/config/config.json
@@ -2,9 +2,8 @@
   "development": {
     "username": "root",
     "password": "qwer1234",
-    "database": "mariadb",
-    "host": "svc.sel4.cloudtype.app",
-    "port": 32303,
+    "database": "nr_information",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
