--- a/Back/config/config.json
+++ b/Back/config/config.json
@@ -1,5 +1,6 @@
 {
   "development": {
+    "use_env_variable": "DATABASE_URL",
     "username": "root",
     "password": "qwer1234",
     "database": "nr_information",
