--- a/Back/package.json
+++ b/Back/package.json
@@ -17,6 +17,7 @@
     "express-sanitizer": "^1.0.6",
     "express-session": "^1.17.1",
     "httpx": "^3.0.1",
+    "mariadb": "^3.4.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
     "nunjucks": "^3.2.4",
